# livre_dor

./: db.sqlite3  manage.py  pyproject.toml
api/: admin.py  forms.py  models.py  views.py
api/migrations/: 0001_initial.py
livre_dor/: asgi.py  settings.py  urls.py  wsgi.py
livre_dor/templates/: index.html
